tests/errors/tc_stmt_return_outside.lx
@module "main"

return 0;
